--- a/jQueryPractice/Views/Home/Index.cshtml
+++ b/jQueryPractice/Views/Home/Index.cshtml
@@ -33,11 +33,25 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>*@
+    <html>
+<head><title></title>
+        <script
+    src="~/Scripts/jquery-3.3.1.js"></script></head>
+<body>
+
+    <p id="test">This is a paragraph</p>
+
+</body>
+</html>
 
 <script>
+    document.getElementById("test").onclick = function () {
+        alert("clicked");
+    }
+
 
     $("test").click(function () {
         $(this).hide();
     });
 
-</script>0
+</script>
