--- a/jQueryPractice/Views/Home/Index.cshtml
+++ b/jQueryPractice/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
         })
 
         //"#" for ID "." for class "p" for p-tag
-
+        //this refers to the current 
         //jQuery version
 
         
